# solarperformanceinsight

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE.txt  README.md  extract_files.py  pyproject.toml  requirements-serve.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: buildimage.yml  database.yml  e2e.yml  javascript.yml  lint.yml  python.yml  test.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
api/solarperformanceinsight_api/: __init__.py  auth.py  compute.py  conftest.py  devapp.py  main.py  models.py  pvmodeling.py  queuing.py  storage.py  utils.py
dashboard/: .env.production  .eslintrc.js  .prettierrc.js  README.md  auth_config.json  cypress.env.json  jest.config.js  package-lock.json  package.json  rename_plotly_types.sh  tsconfig.json  vue.config.js
dashboard/src/: App.vue  main.ts  shims-auth.d.ts  shims-html.d.ts  validator.d.ts
db/: Dockerfile  README.md  migrate  schema.sql  test-requirements.txt
db/migrations/: 20201130184500_create_users.sql  20201130190000_create_users_table.sql  20201130190100_create_systems_table.sql  20201202162400_add_example_data.sql  20201208224427_altered_system.sql  20201214175739_jobs_table.sql  20201221161319_job_example.sql  20210107162707_real_example_job_data.sql  20210112205531_job_results.sql  20210112213845_job_manager.sql  20210223174423_new_job_schema.sql  (+4 more)
solarperformanceinsight-api/: main.py
solarperformanceinsight_api/: __init__.py  auth.py  main.py  models.py
(+169 files in other folders)
